fix : display with more colors and deleted lifeless elements

--- a/style/style.css
+++ b/style/style.css
@@ -76,6 +76,9 @@ h2{
 .minor7, .major7, .octave{ 
     justify-self: center;
     align-self: center;
+    text-align: center;
+    line-height: 100px;
+    font-weight: bold;
 }
 .keyPick, .modePick{
     display: flex;
@@ -86,14 +89,16 @@ h2{
     margin-top: 50px;
     margin-bottom: 50px;
 }
-.key{
-    width: 50px;
+.key, .mode{
     height: 50px;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    background-color: purple;
+    border: 1px solid purple;
 }
-.mode{
-    width: fit-content;
-    height: 50px;
-}
+.key{ width: 50px }
+.mode{ width: fit-content }
 .keyTitle, .modeTitle{
     width: fit-content;
     margin-top: 50px;
@@ -102,7 +107,7 @@ h2{
 
 /*=== FOOTER ===*/
 
-footer{
+/* footer{
     width: 1440px;
     margin-left: auto;
     margin-right: auto;
@@ -113,4 +118,4 @@ footer{
 }
 footer p{
     justify-self: center;
-}
+} */
