--- a/style/style.css
+++ b/style/style.css
@@ -55,25 +55,25 @@ h2{
     ". minor2 minor3 . . minor6 minor7 ."
     ". . . diminished4 diminished5 . . .";
 }
-.root{ grid-area: root }
-.minor2{ grid-area: minor2 }
-.major2{ grid-area: major2 }
-.minor3{ grid-area: minor3 }
-.major3{ grid-area: major3 }
-.diminished4{ grid-area: diminished4 }
-.perfect4{ grid-area: perfect4 }
-.augmented4{ grid-area: augmented4 }
-.diminished5{ grid-area: diminished5 }
-.perfect5{ grid-area: perfect5 }
-.augmented5{ grid-area: augmented5 }
-.minor6{ grid-area: minor6 }
-.major6{ grid-area: major6 }
-.minor7{ grid-area: minor7 }
-.major7{ grid-area: major7 }
-.octave{ grid-area: octave }
-.root, .minor2, .major2, .minor3, .major3, .diminished4, .perfect4, 
-.augmented4, .diminished5, .perfect5, .augmented5, .minor6, .major6,
-.minor7, .major7, .octave{ 
+#root{ grid-area: root }
+#minor2{ grid-area: minor2 }
+#major2{ grid-area: major2 }
+#minor3{ grid-area: minor3 }
+#major3{ grid-area: major3 }
+#diminished4{ grid-area: diminished4 }
+#perfect4{ grid-area: perfect4 }
+#augmented4{ grid-area: augmented4 }
+#diminished5{ grid-area: diminished5 }
+#perfect5{ grid-area: perfect5 }
+#augmented5{ grid-area: augmented5 }
+#minor6{ grid-area: minor6 }
+#major6{ grid-area: major6 }
+#minor7{ grid-area: minor7 }
+#major7{ grid-area: major7 }
+#octave{ grid-area: octave }
+#root, #minor2, #major2, #minor3, #major3, #diminished4, #perfect4, 
+#augmented4, #diminished5, #perfect5, #augmented5, #minor6, #major6,
+#minor7, #major7, #octave{ 
     justify-self: center;
     align-self: center;
     text-align: center;
@@ -96,6 +96,9 @@ h2{
     font-weight: bold;
     background-color: purple;
     border: 1px solid purple;
+}
+.key:hover, .mode:hover{
+    cursor: pointer;
 }
 .key{ width: 50px }
 .mode{ width: fit-content }
