--- a/style/style.css
+++ b/style/style.css
@@ -80,16 +80,17 @@ h2{
     line-height: 100px;
     font-weight: bold;
 }
-.keyPick, .modePick{
+.keyPick, .modePick{ justify-content: space-between }
+.instrumentPick{ justify-content: space-around }
+.keyPick, .modePick, .instrumentPick{
     display: flex;
     width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    justify-content: space-between;
     margin-top: 50px;
     margin-bottom: 50px;
 }
-.key, .mode{
+.key, .mode, .instrument{
     height: 50px;
     border-radius: 5px;
     color: white;
@@ -97,12 +98,12 @@ h2{
     background-color: purple;
     border: 1px solid purple;
 }
-.key:hover, .mode:hover{
+.key:hover, .mode:hover, .instrument:hover{
     cursor: pointer;
 }
 .key{ width: 50px }
-.mode{ width: fit-content }
-.keyTitle, .modeTitle{
+.mode, .instrument{ width: fit-content }
+.keyTitle, .modeTitle, .instrumentTitle{
     width: fit-content;
     margin-top: 50px;
     margin-bottom: 25px;
@@ -122,3 +123,39 @@ h2{
 footer p{
     justify-self: center;
 } */
+
+/* === GUITAR === */
+.instrumentsContainer{
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    height: fit-content;
+}
+.divTable {
+    border: 1px solid #948473;
+    background-color: #FFE3C6;
+    width: 1440px;
+    height: 240px;
+    text-align: center;
+    border-collapse: collapse;
+}
+.divTableBody { 
+    width: 100%;
+    height: 100%;
+}
+.divTableRow {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #948473;
+}
+.divTable .divTableBody .divTableCell { 
+    font-size: 13px;
+    width: 120px;
+    height: 40px;
+    border: 1px solid #948473;
+    border-collapse: collapse;
+    margin: 0;
+}
+.divTableBody { display: table-row-group }
+.divTable{ display: table }
+.divTableRow { display: flex }
