--- a/style/style.css
+++ b/style/style.css
@@ -1,114 +1,233 @@
 /*=== HEADER ===*/
 
-header{
-    width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: column;
-    white-space: nowrap;
-    justify-content: center;
+header {
+	width: 1440px;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	flex-direction: column;
+	white-space: nowrap;
+	justify-content: center;
 }
-h1{
-    font-family: 'Raleway', sans-serif;
-    font-size: xx-large;
-    font-weight: bold;
-    color: purple;
-    margin-left: auto;
-    margin-right: auto;
+h1 {
+	font-family: 'Raleway', sans-serif;
+	font-size: xx-large;
+	font-weight: bold;
+	color: purple;
+	margin-left: auto;
+	margin-right: auto;
 }
-h2{
-    font-family: 'Raleway', sans-serif;
-    font-size: medium;
-    font-weight: bold;
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
+h2 {
+	font-family: 'Raleway', sans-serif;
+	font-size: medium;
+	font-weight: bold;
+	color: black;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
 }
 
 /*=== MAIN ===*/
 
-.circle{
-    border: 1px solid black;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
+.circle {
+	border: 1px solid black;
+	border-radius: 50%;
+	width: 100px;
+	height: 100px;
 }
-.circlesWrapper{
-    width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(5, 100px);
-    row-gap: 25px;
-    column-gap: 25px;
-    justify-content: center;
-    align-content: center;
-    grid-template-areas: 
-    ". . . augmented4 augmented5 . . ."
-    ". major2 major3 . . major6 major7 ."
-    "root . . perfect4 perfect5 . . octave"
-    ". minor2 minor3 . . minor6 minor7 ."
-    ". . . diminished4 diminished5 . . .";
+.circlesWrapper {
+	width: 1440px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	display: grid;
+	grid-template-columns: repeat(8, 1fr);
+	grid-template-rows: repeat(5, 100px);
+	row-gap: 25px;
+	column-gap: 25px;
+	justify-content: center;
+	align-content: center;
+	grid-template-areas:
+		'. . . augmented4 augmented5 . . .'
+		'. major2 major3 . . major6 major7 .'
+		'root . . perfect4 perfect5 . . octave'
+		'. minor2 minor3 . . minor6 minor7 .'
+		'. . . diminished4 diminished5 . . .';
 }
-#root{ grid-area: root }
-#minor2{ grid-area: minor2 }
-#major2{ grid-area: major2 }
-#minor3{ grid-area: minor3 }
-#major3{ grid-area: major3 }
-#diminished4{ grid-area: diminished4 }
-#perfect4{ grid-area: perfect4 }
-#augmented4{ grid-area: augmented4 }
-#diminished5{ grid-area: diminished5 }
-#perfect5{ grid-area: perfect5 }
-#augmented5{ grid-area: augmented5 }
-#minor6{ grid-area: minor6 }
-#major6{ grid-area: major6 }
-#minor7{ grid-area: minor7 }
-#major7{ grid-area: major7 }
-#octave{ grid-area: octave }
-#root, #minor2, #major2, #minor3, #major3, #diminished4, #perfect4, 
-#augmented4, #diminished5, #perfect5, #augmented5, #minor6, #major6,
-#minor7, #major7, #octave{ 
-    justify-self: center;
-    align-self: center;
-    text-align: center;
-    line-height: 100px;
-    font-weight: bold;
+#root {
+	grid-area: root;
 }
-.keyPick, .modePick{ justify-content: space-between }
-.instrumentPick{ justify-content: space-around }
-.keyPick, .modePick, .instrumentPick{
-    display: flex;
-    width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
+#minor2 {
+	grid-area: minor2;
 }
-.key, .mode, .instrument{
-    height: 50px;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    background-color: purple;
-    border: 1px solid purple;
+#major2 {
+	grid-area: major2;
 }
-.key:hover, .mode:hover, .instrument:hover{
-    cursor: pointer;
+#minor3 {
+	grid-area: minor3;
 }
-.key{ width: 50px }
-.mode, .instrument{ width: fit-content }
-.keyTitle, .modeTitle, .instrumentTitle{
-    width: fit-content;
-    margin-top: 50px;
-    margin-bottom: 25px;
+#major3 {
+	grid-area: major3;
 }
-
+#diminished4 {
+	grid-area: diminished4;
+}
+#perfect4 {
+	grid-area: perfect4;
+}
+#augmented4 {
+	grid-area: augmented4;
+}
+#diminished5 {
+	grid-area: diminished5;
+}
+#perfect5 {
+	grid-area: perfect5;
+}
+#augmented5 {
+	grid-area: augmented5;
+}
+#minor6 {
+	grid-area: minor6;
+}
+#major6 {
+	grid-area: major6;
+}
+#minor7 {
+	grid-area: minor7;
+}
+#major7 {
+	grid-area: major7;
+}
+#octave {
+	grid-area: octave;
+}
+#root,
+#minor2,
+#major2,
+#minor3,
+#major3,
+#diminished4,
+#perfect4,
+#augmented4,
+#diminished5,
+#perfect5,
+#augmented5,
+#minor6,
+#major6,
+#minor7,
+#major7,
+#octave {
+	justify-self: center;
+	align-self: center;
+	text-align: center;
+	line-height: 100px;
+	font-weight: bold;
+}
+.keyPick,
+.modePick {
+	justify-content: space-between;
+}
+.instrumentPick {
+	justify-content: space-around;
+}
+.keyPick,
+.modePick,
+.instrumentPick {
+	display: flex;
+	width: 1440px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+.key,
+.mode,
+.instrument {
+	height: 50px;
+	border-radius: 5px;
+	color: white;
+	font-weight: bold;
+	background-color: purple;
+	border: 1px solid purple;
+}
+.key:hover,
+.mode:hover,
+.instrument:hover {
+	cursor: pointer;
+}
+.key {
+	width: 50px;
+}
+.mode,
+.instrument {
+	width: fit-content;
+}
+.keyTitle,
+.modeTitle,
+.instrumentTitle {
+	width: fit-content;
+	margin-top: 50px;
+	margin-bottom: 25px;
+}
+.label {
+	position: relative;
+	font-size: small;
+	justify-self: center;
+	width: fit-content;
+	margin-top: 130px;
+	align-self: center;
+	text-align: center;
+}
+#rootLabel {
+	grid-area: root;
+}
+#m2Label {
+	grid-area: minor2;
+}
+#M2Label {
+	grid-area: major2;
+}
+#m3Label {
+	grid-area: minor3;
+}
+#M3Label {
+	grid-area: major3;
+}
+#dim4Label {
+	grid-area: diminished4;
+}
+#p4Label {
+	grid-area: perfect4;
+}
+#aug4Label {
+	grid-area: augmented4;
+}
+#dim5Label {
+	grid-area: diminished5;
+}
+#p5Label {
+	grid-area: perfect5;
+}
+#aug5Label {
+	grid-area: augmented5;
+}
+#m6Label {
+	grid-area: minor6;
+}
+#M6Label {
+	grid-area: major6;
+}
+#m7Label {
+	grid-area: minor7;
+}
+#M7Label {
+	grid-area: major7;
+}
+#OLabel {
+	grid-area: octave;
+}
 /*=== FOOTER ===*/
 
 /* footer{
@@ -125,37 +244,43 @@ footer p{
 } */
 
 /* === GUITAR === */
-.instrumentsContainer{
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-    height: fit-content;
+.instrumentsContainer {
+	width: fit-content;
+	margin-left: auto;
+	margin-right: auto;
+	height: fit-content;
 }
 .divTable {
-    border: 1px solid #948473;
-    background-color: #FFE3C6;
-    width: 1440px;
-    height: 240px;
-    text-align: center;
-    border-collapse: collapse;
+	border: 1px solid #948473;
+	background-color: #ffe3c6;
+	width: 1440px;
+	height: 240px;
+	text-align: center;
+	border-collapse: collapse;
 }
-.divTableBody { 
-    width: 100%;
-    height: 100%;
+.divTableBody {
+	width: 100%;
+	height: 100%;
 }
 .divTableRow {
-    width: 100%;
-    height: 40px;
-    border: 1px solid #948473;
+	width: 100%;
+	height: 40px;
+	border: 1px solid #948473;
 }
-.divTable .divTableBody .divTableCell { 
-    font-size: 13px;
-    width: 120px;
-    height: 40px;
-    border: 1px solid #948473;
-    border-collapse: collapse;
-    margin: 0;
+.divTable .divTableBody .divTableCell {
+	font-size: 13px;
+	width: 120px;
+	height: 40px;
+	border: 1px solid #948473;
+	border-collapse: collapse;
+	margin: 0;
 }
-.divTableBody { display: table-row-group }
-.divTable{ display: table }
-.divTableRow { display: flex }
+.divTableBody {
+	display: table-row-group;
+}
+.divTable {
+	display: table;
+}
+.divTableRow {
+	display: flex;
+}
