--- a/style/style.css
+++ b/style/style.css
@@ -254,9 +254,16 @@ footer p{
 	border: 1px solid #948473;
 	background-color: #ffe3c6;
 	width: 1440px;
-	height: 240px;
 	text-align: center;
 	border-collapse: collapse;
+}
+#guitarFretboard {
+	height: 200px;
+	display: none;
+}
+#bassFretboard {
+	height: 120px;
+	display: none;
 }
 .divTableBody {
 	width: 100%;
